# ffmpge-linux

./: CMakeLists.txt  res.qrc
include/: mainwindow.h  playlist.h  title.h
lib/ffmpeg/x86_64/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
resource/layout/: ColorText.qml  main.qml
src/: main.cpp  mainwindow.cpp  mainwindow.ui  playlist.cpp  title.cpp
